--- a/packages/custom/ddb/bower.json
+++ b/packages/custom/ddb/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "moment": "~2.10.3",
     "angular-chart.js": "~0.7.1",
-    "lodash": "~3.9.3"
+    "lodash": "~3.9.3",
+    "angular-bootstrap-multiselect": "https://github.com/bentorfs/angular-bootstrap-multiselect.git#~1.1.1"
   }
 }
