--- a/packages/custom/ddb/bower.json
+++ b/packages/custom/ddb/bower.json
@@ -6,6 +6,7 @@
     "angular-chart.js": "~0.7.1",
     "lodash": "~3.9.3",
     "angular-bootstrap-multiselect": "https://github.com/bentorfs/angular-bootstrap-multiselect.git#~1.1.4",
-    "angular-moment": "~0.10.1"
+    "angular-moment": "~0.10.1",
+    "ngSmoothScroll": "~1.7.1"
   }
 }
